CREATE TABLE [orch].[DependencyCondition] (
    [DependencyCondition] VARCHAR (20) NOT NULL,
    CONSTRAINT [PK_DependencyCondition] PRIMARY KEY CLUSTERED ([DependencyCondition] ASC)
);


GO

