CREATE TABLE [orch].[WatermarkDataType] (
    [WatermarkDataType] VARCHAR (20) NOT NULL,
    CONSTRAINT [PK_WatermarkDataType] PRIMARY KEY CLUSTERED ([WatermarkDataType] ASC)
);

GO
