erDiagram
    Jobs {
        varchar JobName PK
        bit Include
        int TimeoutInSeconds
        int Retries
        bit RefreshMetadata
        bit UpdateObjectIDs
        bit UpdateParallelBatchLimit
        int ParallelBatchLimit
        varchar WorkspaceName
        tinyint LoggingLevel FK
    }
    Tasks {
        varchar TaskName PK
        varchar JobName FK
        varchar ObjectName FK
        varchar WorkspaceName FK
        varchar UpdateOption
        varchar TaskType FK
        tinyint LoggingLevel FK
    }
    TaskParameters {
        varchar TaskName PK,FK
        varchar ParameterName PK
        varchar Value
    }
    TaskWatermark {
        bigint TaskWatermarkId PK
        varchar TaskName FK
        varchar WatermarkColumn
        varchar WatermarkDataType FK
        nvarchar WatermarkValue
        nvarchar PreviousWatermarkValue
        bit IsCurrentWatermark
        datetime2 RunDateTimeUtc
    }
    WatermarkDataType {
        varchar WatermarkDataType PK
    }
    TaskType {
        varchar TaskType PK
        bit AllowParallel
    }
    ObjectIDs {
        varchar WorkspaceName PK
        varchar ObjectName PK
        varchar ObjectID
        varchar WorkspaceID
    }
    DependencyCondition {
        varchar DependencyCondition PK
    }
    JobDependencies {
        varchar JobName PK,FK
        varchar DependentJobName PK
        varchar DependsOn FK
    }
    TaskDependencies {
        varchar TaskName PK,FK
        varchar DependentTaskName PK
        varchar DependsOn FK
    }
    RunLog {
        bigint RunLogId PK
        nvarchar RunID
        nvarchar JobName
        nvarchar TaskName
        nvarchar Status
    }
    JobRunEvent {
        bigint JobRunEventId PK,FK
        varchar JobName
        tinyint LoggingLevel FK
        nvarchar Status
    }
    PipelineRunEvent {
        bigint PipelineRunEventId PK,FK
        bigint JobRunEventId FK
        tinyint LoggingLevel FK
        nvarchar Status
    }
    TaskRunEvent {
        bigint TaskRunEventId PK,FK
        bigint JobRunEventId FK
        varchar JobName
        varchar TaskName
        tinyint LoggingLevel FK
        nvarchar Status
    }
    ActivityRunEvent {
        nvarchar ActivityRunId PK
        bigint RunLogId FK
        bigint JobRunEventId FK
        tinyint LoggingLevel FK
        nvarchar TaskName
        nvarchar TaskInstanceId
        nvarchar Status
    }
    LoggingLevel {
        tinyint LoggingLevel PK
        nvarchar LoggingLevelName
    }

    Jobs ||--o{ Tasks : "has"
    Tasks }o--|| ObjectIDs : "FK_Tasks_ObjectIDs_Job (WorkspaceName, JobName)"
    Tasks }o--|| ObjectIDs : "FK_Tasks_ObjectIDs_Object (WorkspaceName, ObjectName)"
    Tasks }o--|| TaskType : "is of type"
    Tasks ||--o{ TaskParameters : "key/value rows -> built into ParametersJson"
    Tasks ||--o{ TaskWatermark : "history of watermark advances (0..1 current row)"
    TaskWatermark }o--|| WatermarkDataType : "WatermarkDataType"

    Jobs ||--o{ JobDependencies : "JobName"
    JobDependencies }o--|| DependencyCondition : "DependsOn"
    Tasks ||--o{ TaskDependencies : "TaskName"
    TaskDependencies }o--|| DependencyCondition : "DependsOn"

    Jobs }o--|| LoggingLevel : "LoggingLevel"
    Tasks }o--|| LoggingLevel : "LoggingLevel"
    JobRunEvent }o--|| LoggingLevel : "LoggingLevel"
    PipelineRunEvent }o--|| LoggingLevel : "LoggingLevel"
    TaskRunEvent }o--|| LoggingLevel : "LoggingLevel"
    ActivityRunEvent }o--|| LoggingLevel : "LoggingLevel"

    RunLog ||--o| JobRunEvent : "JobRunEventId = RunLogId (opening row)"
    RunLog ||--o| PipelineRunEvent : "PipelineRunEventId = RunLogId (opening row)"
    RunLog ||--o| TaskRunEvent : "TaskRunEventId = RunLogId (opening row)"
    RunLog ||--o{ ActivityRunEvent : "RunLogId (shareable w/ parent run)"

    JobRunEvent ||--o| PipelineRunEvent : "JobRunEventId (run hierarchy)"
    JobRunEvent ||--o{ TaskRunEvent : "JobRunEventId (run hierarchy)"
    JobRunEvent ||--o{ ActivityRunEvent : "JobRunEventId (run hierarchy)"
